다음 정보를 model에 담아서 뷰에 전달

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,14 @@
+#스프링 부트가 제공하는 기본 예외 페이지 끄기
 server.error.whitelabel.enabled=false
+
+#에러 페이지(error-500)에 message, trace, error 내용을 뜨게 할지 설정하는 기능 (속성값 = never, always, on_param)
+#on_param: "http://localhost:8080/error-ex?message=&errors=&trace=" 파라미터가 있어야 뜸
 server.error.include-exception=true
-#에러 페이지에 message, trace, error 내용을 뜨게 할지 설정하는 기능
-#on_param: http://localhost:8080/error-ex?message=&errors=&trace= 처럼 파라미터가 있어야 뜸
 server.error.include-message=on_param
 server.error.include-stacktrace=on_param
 server.error.include-binding-errors=on_param
+
+#오류 페이지 경로 설정, BasicErrorController 오류 컨트롤러 경로에 함께 사용
+#server.error.path=/error
+
 
